objects/Email_Routing_Rules__c.object
<CustomObject><fields>
        <fullName>Area_on_SR__c</fullName>
        <label>Area on SR</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>will contain name of record type for creating case.</description>
        <label>Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Email_Service_Address__c</fullName>
        <label>Email Service Address</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Generic_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generic Email</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Response_to_DEV_email__c</fullName>
        <label>Response to (DEV email)</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Response_to_PROD__c</fullName>
        <label>Response to (PROD)</label>
        <type>Email</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Response_to_TEST_email__c</fullName>
        <label>Response to (TEST email)</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Sub_Area_on_SR__c</fullName>
        <label>Sub Area on SR</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><label>Email Routing Rules</label><visibility>Public</visibility></CustomObject>